Final version of notebook with error handling and cleaned output

--- a/Final_project.ipynb
+++ b/Final_project.ipynb
@@ -35,6 +35,31 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "1912c7f6-bad8-4cb3-bd04-14217e188971",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Dataset loaded successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load the Kaggle Dataset and tell confirm with the end user - 100MB limit for Git Hub thank you for your patience!\n",
+    "try:\n",
+    "    df = pd.read_csv('creditcard.csv')\n",
+    "    print(\"✅ Dataset loaded successfully!\")\n",
+    "except FileNotFoundError:\n",
+    "    print(\"❌ 'creditcard.csv' not found.\")\n",
+    "    print(\"🔗 Download it from Kaggle: https://www.kaggle.com/datasets/mlg-ulb/creditcardfraud\")\n",
+    "    print(\"📁 Place it in the same directory as this notebook.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "ef03be9a-7f79-46b0-a7be-76d0667f495e",
    "metadata": {},
    "outputs": [
@@ -233,17 +258,12 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# Load the dataset courtesy of Kaggle\n",
-    "df = pd.read_csv('creditcard.csv')\n",
-    "\n",
-    "# Here is a quick peek at the data!\n",
-    "df.head()"
+    "   display(df.head())"
    ]
   },
   {
@@ -258,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a15a90c9-9fd0-4952-9cf8-2b2842e56495",
    "metadata": {},
    "outputs": [
@@ -314,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "196b1423-88b4-48fb-82b7-9a38d0237293",
    "metadata": {},
    "outputs": [
@@ -614,7 +634,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "362a953e-17e6-450d-af50-a266e32e6044",
    "metadata": {},
    "outputs": [
@@ -658,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "766cd53f-11a9-4785-a4a7-7001805f8861",
    "metadata": {},
    "outputs": [],
@@ -680,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b2bff5a8-150c-467d-bffa-a87a53e20a42",
    "metadata": {},
    "outputs": [
@@ -713,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ac18481b-408d-4f01-b2d6-ab0664d85186",
    "metadata": {},
    "outputs": [],
@@ -724,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1709dc55-0164-4a2f-9df8-fb085e3e1588",
    "metadata": {},
    "outputs": [],
@@ -745,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "156a4d94-30e3-44d8-807b-47474fb6507e",
    "metadata": {},
    "outputs": [
@@ -768,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "f3f17b5d-6c32-4f93-99a8-d1d8b815c935",
    "metadata": {},
    "outputs": [
@@ -800,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d0d3eb41-f70c-48a9-ad2d-d0f24608898a",
    "metadata": {},
    "outputs": [
@@ -838,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "8c3f0736-79ac-44fc-b4c9-5577c5655a68",
    "metadata": {},
    "outputs": [
